force-app/main/default/objects/Fee__c/fields/Lab_Fee__c.field-meta.xml
<CustomField>
    <fullName>Lab_Fee__c</fullName>
    <label>Lab Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>