force-app/main/default/objects/Fee__c/fields/Other_Fee__c.field-meta.xml
<CustomField>
    <fullName>Other_Fee__c</fullName>
    <label>Other Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>