force-app/main/default/objects/Fee__c/fields/Semester__c.field-meta.xml
<CustomField>
    <fullName>Semester__c</fullName>
    <label>Semester</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Semester 1</fullName>
            </value>
            <value>
                <fullName>Semester 2</fullName>
            </value>
            <value>
                <fullName>Semester 3</fullName>
            </value>
            <value>
                <fullName>Semester 4</fullName>
            </value>
            <value>
                <fullName>Semester 5</fullName>
            </value>
            <value>
                <fullName>Semester 6</fullName>
            </value>
            <value>
                <fullName>Semester 7</fullName>
            </value>
            <value>
                <fullName>Semester 8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>