force-app/main/default/objects/Fee__c/validationRules/Due_Date_cannot_be_in_the_past.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Date_cannot_be_in_the_past</fullName>
    <active>true</active>
    <errorConditionFormula>Due_Date__c &lt; TODAY()</errorConditionFormula>
    <errorMessage>Due Date cannot be earlier than today.</errorMessage>
</ValidationRule>