force-app/main/default/objects/Fee__c/validationRules/Exam_Fee_cannot_be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Exam_Fee_cannot_be_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>Exam_Fee__c &lt; 0</errorConditionFormula>
    <errorMessage>Exam Fee cannot be negative.</errorMessage>
</ValidationRule>