force-app/main/default/objects/Fee__c/validationRules/Lab_Fee_cannot_be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Lab_Fee_cannot_be_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>Lab_Fee__c &lt; 0</errorConditionFormula>
    <errorMessage>Lab Fee cannot be negative.</errorMessage>
</ValidationRule>