force-app/main/default/objects/Fee__c/validationRules/Other_Fee_cannot_be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Fee_cannot_be_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>Other_Fee__c &lt; 0</errorConditionFormula>
    <errorMessage>Other Fee cannot be negative.</errorMessage>
</ValidationRule>