force-app/main/default/objects/Fee__c/validationRules/Semester_must_be_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Semester_must_be_selected</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Semester__c))</errorConditionFormula>
    <errorMessage>Select Semester.</errorMessage>
</ValidationRule>