force-app/main/default/objects/Fee__c/validationRules/Tuition_Fee_cannot_be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Tuition_Fee_cannot_be_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>Tuition_Fee__c &lt; 0</errorConditionFormula>
    <errorMessage>Fee amount cannot be negative.</errorMessage>
</ValidationRule>